--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -30,7 +30,7 @@
   position: absolute;
   background: rgba(255, 255, 255, 0.1);
   border-radius: 50%;
-  filter: blur(5px);
+  filter: blur(2px);
   opacity: 0.7;
   animation: float 6s ease-in-out infinite;
 }
@@ -40,25 +40,22 @@
   height: 150px;
   top: 10%;
   left: 5%;
-  background: rgba(0, 191, 255, 0.3);
   animation-delay: 0s;
 }
 
 .shape-2 {
   width: 200px;
   height: 200px;
-  bottom: 0%;
-  right: -10%;
-  border-radius: 40% 60% 70% 30% / 40% 50% 60% 50%;
-  background: rgba(255, 255, 255, 0.15);
+  bottom: 65%;
+  right: 50%;
   animation-delay: 1s;
 }
 
 .shape-3 {
   width: 100px;
   height: 100px;
-  top: 50%;
-  right: 20%;
+  top: 70%;
+  right: 25%;
   background: rgba(0, 191, 255, 0.4);
   animation-delay: 2s;
 }
@@ -80,6 +77,10 @@
   border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
   background: rgba(0, 191, 255, 0.2);
   animation-delay: 4s;
+}
+.shape, .shape-1, .shape-2, .shape-3, .shape-4, .shape-5 {
+  
+  background: url("./../../itclublogo.png") no-repeat center center/cover;
 }
 
 @keyframes float {
